# naia-relay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHASE_COMPLETION_METHOD.md  PLAN.md  README.md  SPEC.md  pyproject.toml
doc/: README.md  developer-guide.md  getting-started.md  integrations.md  mcp-compatibility.md  operator-guide.md  readiness-file.md  rlp-protocol.md  tep-protocol.md  troubleshooting.md  unsupported-v1.md
examples/client/: config.yaml
examples/codex-client/: config.yaml
examples/configs/: direct.yaml
examples/host/: config.yaml
examples/neovim-host/: config.yaml
examples/python/: http_print_message_tool.py
examples/scripts/: run-client.sh  run-codex-client.sh  run-direct.sh  run-host.sh  run-neovim-host.sh
examples/tool-executors/: README.md
examples/tool-executors/python/: host_stdio_executor.py  host_tcp_executor.py
examples/tool-executors/rust/: Cargo.toml
src/naia_relay/: __init__.py  __main__.py  cli.py
src/naia_relay/config/: __init__.py  loader.py  models.py
testing/: probe_client_stdio_to_tcp_host.py  probe_host_stdio_executor_to_tcp_relay.py
tests/e2e/: test_codex_http_mcp.py  test_stdio_runtime_loops.py
tests/integration/: helpers.py  test_bridged_matrix.py  test_conformance.py  test_direct_matrix.py
tests/unit/: test_cli.py  test_config_loader.py  test_core_tracking.py  test_http_transport.py  test_mcp_handler.py  test_observability.py  test_registry_store.py  test_release_readiness.py  test_resilience.py  test_rlp_handler.py  test_runtime.py  test_tep_handler.py  test_transports.py
(+31 files in other folders)
