[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naia-relay"
version = "0.1.0"
description = "Bidirectional MCP relay for MCP clients, tool executors, and relay-to-relay bridging."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ollie" }
]
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.8",
]

[project.scripts]
naia-relay = "naia_relay.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["naia_relay"]
strict = false
warn_unused_configs = true

